log
Tue 07 May 2024 11:38:15 PM UTC: 
 tests:  1|8
total_score: 0/70
934f3fb
Tue 07 May 2024 11:43:05 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
d8523b9
Tue 07 May 2024 11:52:23 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  11|6
total_score: 15/70
cf4e133
Tue 07 May 2024 11:57:41 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  12|6
total_score: 15/70
e6d41cd
Tue 07 May 2024 11:58:22 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
c9ae127
Tue 07 May 2024 11:59:37 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
e758268
Wed 08 May 2024 12:12:13 AM UTC: 
 treemap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:98:24: error: unused variable ‘aux’ [-Werror=unused-variable]
   98 |             TreeNode * aux = node->parent;
      |                        ^~~
cc1: all warnings being treated as errors
Compilation failed
e6379e8
Wed 08 May 2024 12:12:57 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0eca1a3
Wed 08 May 2024 12:15:24 AM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
0015d48
Wed 08 May 2024 12:18:35 AM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
bdcbe07
Wed 08 May 2024 12:26:24 AM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  18|3
total_score: 40/70
9585a9c
Sat 11 May 2024 01:36:56 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
e623903
Sat 11 May 2024 01:40:19 AM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  22|2
total_score: 50/70
da25bfa
Sat 11 May 2024 01:48:32 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
bacffc6
Sat 11 May 2024 01:50:59 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7b1bc2e
